--- a/style.css
+++ b/style.css
@@ -3,24 +3,176 @@
     padding: 0;
 }
 
+/* To change svg colour */
+path {
+    fill: white;
+}
+
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: white;
+}
+
+input[type="search"] {
+    appearance: none;
+    border-radius: 20px;
+    height: 30px;
+    padding-left: 15px;
+    font-size: 17px;
+    border: 1px solid grey;
+    background-color: #9E4784;
+    color: white;
+    align-items: center;
+}
+
+#magnifying-glass {
+    height: 30px;
+    width: 30px;
+}
+
 .container {
+    
     border: 1px solid black;
     display: grid;
-    grid-template-columns: 200px minmax(600px,1fr);
-    grid-template-rows: auto;
+    grid-template-columns: clamp(230px, 20%, 250px) minmax(600px,1fr);
+    grid-template-rows: 220px 1fr;
     grid-template-areas: 
     "sidebar header"
     "sidebar main-content"
     "sidebar main-content";
+    height: max(100vh,100%);
+    width: max(1200px, 100%);
 
 }
 
 /* Darkest color #37306B */
 
+/* Header */
 .header {
     grid-area: header;
     border: 1px solid red;
     background-color: #D27685;
+    padding: 20px 50px 20px 50px;
+    /* align-items: start; */
+
+    display: grid;
+    grid-template-columns: minmax(550px,1fr) 1fr;
+    grid-template-rows: 1fr 4fr;
+    grid-template-areas: 
+    "searchbar account-right"
+    "account-header header-buttons";
+}
+
+.searchbar {
+    display: grid;
+    /* height: 50px; */
+    grid-template-columns: 30px 1fr;
+    column-gap: 10px;
+    align-items: center;
+}
+
+/* Account top right */
+.account-right {
+    justify-self: end;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr 60px 1fr;
+    column-gap: 30px;
+    /* margin-left: 50px; */
+    align-items: center;
+    
+
+}
+
+#notification {
+    /* display: flex; */
+    height: 30px;
+    width: 30px;
+    justify-self: end;
+}
+
+#profile-pic > a > img {
+    width: 60px;
+    
+}
+
+#profile-name {
+    justify-self: start;
+}
+
+#profile-name > p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: white;
+    font-weight: 600;
+}
+
+/* Account header */
+
+.account-header {
+    display: grid;
+    grid-template-columns: 90px 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+    "main-pic greeting"
+    "main-pic name-header";
+}
+
+#main-pic {
+    grid-area: main-pic;
+    display: grid;
+    align-items: center;
+}
+
+#main-pic > a > img{
+    width: 90px;
+}
+
+#greeting {
+    display: grid;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 10px;
+    font-size: 15px;
+    color: white;
+    font-weight: 600;
+    justify-content: start;
+    align-items: end;
+}
+
+#name-header {
+    display: grid;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 10px;
+    font-size: 23px;
+    color: white;
+    font-weight: 600;
+    justify-content: start;
+    align-items: start;
+}
+
+
+/* Header buttons */
+
+.header-buttons {
+    justify-self: end;
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    column-gap: 20px;
+    justify-items: center;
+    align-items: center;
+}
+
+.h-buttons {
+    appearance: none;
+    background-color: #66347F;
+    height: 40px;
+    width: 100px;
+    color: white;
+    border: 1px solid grey;
+    border-radius: 20px;
+    font-weight: bold;
+   
 }
 
 /* Sidebar */
@@ -29,7 +181,21 @@
     grid-area: sidebar;
     background-color: #66347F;
     border: 1px solid yellow;
-    padding: 15px;
+    padding: 20px;
+}
+
+.sidebar-header {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    align-items: center;
+    
+}
+
+#sidebar-main-icon {
+    /* background-image: url(assets/view-dashboard.svg); */
+    width: 50px;
+    height: 50px;
+    /* color: white; */
 }
 
 #sidebar-main-text > p{
@@ -43,23 +209,174 @@
     margin-bottom: 60px;
 }
 
-.first-menu,
-.second-menu{
+.menu-item {
+    display: grid;
     margin-bottom: 20px;
+    width: 150px;
+
+    
+
 }
 
-.first-menu > a,
-.second-menu > a{
+.menu-item > a {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    /* border: 1px solid red; */
+    justify-content: start;
+    width: min-content;
+    text-align: start;
+    
+
     color: white;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
-    
+
 }
+
+.menu-font {
+    width: min-content;
+    margin-left: 15px;
+}
+
+
+.menu-icon {
+    width: 40px;
+    height: 40px;
+}
+
+
+
+
 /* Main content */
+
+.content-header > h1 {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 .main-content {
     grid-area: main-content;
     border: 1px solid blue;
     background-color: #9E4784;
+    padding: 20px;
+
+
+    display: grid;
+    grid-template-columns: 3fr minmax(350px,1fr);
+    column-gap: 20px;
+    grid-template-areas: 
+    "project-container announcements"
+    "project-container trending";
 }
+
+.project-container {
+    grid-area: project-container;
+    
+}
+.your-projects {
+    grid-area: your-projects;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 30px;
+}
+
+.projects {
+    /* width: 300px; */
+    padding: 30px;
+    background-color: #D27685;
+    border-radius: 10px;
+    border-left: 10px solid crimson;
+    height: 250px;
+    display: grid;
+}
+
+.project-details {
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+
+.card-icon-container {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    align-self: end;
+}
+
+.icon-section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.card-icons {
+    width: 20px;
+}
+
+
+.announcements {
+    grid-area: announcements;
+}
+
+.announcement-header > h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.announcement-content{
+    border-radius: 10px;
+    background-color: #D27685;
+    padding: 30px;
+
+    display: grid;
+    grid-template-rows: repeat(3,1fr);
+    /* row-gap: 30px; */
+
+}
+
+.announcement-cards {
+    padding: 20px;
+}
+
+.announcement-cards:nth-child(2)  {
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+}
+
+.trending {
+    grid-area: trending;
+}
+
+
+.trending-profiles {
+    display: grid;
+    border-radius: 10px;
+    background-color: #D27685;
+    padding: 30px;
+
+    display: grid;
+    grid-template-rows: repeat(4,1fr);
+}
+
+.profiles {
+    display: grid;
+    grid-template-columns: 40px 1fr;
+    column-gap: 30px;
+    align-items: center;
+    margin: 10px 0px;
+}
+
+
+.trending-pic > a > img {
+    width: 60px;
+}
+/* .profiles:nth-child(2),
+.profiles:nth-child(3),
+.profiles:nth-child(4){
+    border-top: 2px solid white;
+} */
