--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
+/* Refactor for maintainability */
+
 *{
     margin: 0;
     padding: 0;
+}
+
+html,body {
+    background:#931978;
 }
 
 /* To change svg colour */
 path {
     fill: white;
 }
+
 
 h2 {
     font-family: Arial, Helvetica, sans-serif;
@@ -21,9 +28,14 @@ input[type="search"] {
     padding-left: 15px;
     font-size: 17px;
     border: 1px solid grey;
-    background-color: #9E4784;
+    background-color: #931978;
     color: white;
     align-items: center;
+}
+
+input[type="search"]:focus-visible {
+    outline: none;
+    border: 3px solid rgb(84, 0, 84);
 }
 
 #magnifying-glass {
@@ -31,17 +43,21 @@ input[type="search"] {
     width: 30px;
 }
 
+#magnifying-glass > svg > path {
+    fill: #37306B;
+}
+
 .container {
     
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: grid;
-    grid-template-columns: clamp(230px, 20%, 250px) minmax(600px,1fr);
+    grid-template-columns: clamp(250px, 20%, 300px) minmax(600px,1fr);
     grid-template-rows: 220px 1fr;
     grid-template-areas: 
     "sidebar header"
     "sidebar main-content"
     "sidebar main-content";
-    height: max(100vh,100%);
+    height: max(100%);
     width: max(1200px, 100%);
 
 }
@@ -51,13 +67,13 @@ input[type="search"] {
 /* Header */
 .header {
     grid-area: header;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     background-color: #D27685;
     padding: 20px 50px 20px 50px;
     /* align-items: start; */
 
     display: grid;
-    grid-template-columns: minmax(550px,1fr) 1fr;
+    grid-template-columns: minmax(550px,1fr) minmax(300px,1fr);
     grid-template-rows: 1fr 4fr;
     grid-template-areas: 
     "searchbar account-right"
@@ -92,6 +108,10 @@ input[type="search"] {
     justify-self: end;
 }
 
+#notification > svg > path {
+    fill: #37306B;
+}
+
 #profile-pic > a > img {
     width: 60px;
     
@@ -104,7 +124,7 @@ input[type="search"] {
 #profile-name > p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    color: white;
+    color: #37306B;
     font-weight: 600;
 }
 
@@ -134,7 +154,7 @@ input[type="search"] {
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 10px;
     font-size: 15px;
-    color: white;
+    color: #37306B;
     font-weight: 600;
     justify-content: start;
     align-items: end;
@@ -145,7 +165,7 @@ input[type="search"] {
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 10px;
     font-size: 23px;
-    color: white;
+    color: #37306B;
     font-weight: 600;
     justify-content: start;
     align-items: start;
@@ -158,7 +178,7 @@ input[type="search"] {
     justify-self: end;
     display: grid;
     grid-template-columns: repeat(3, 100px);
-    column-gap: 20px;
+    column-gap: 70px;
     justify-items: center;
     align-items: center;
 }
@@ -166,13 +186,18 @@ input[type="search"] {
 .h-buttons {
     appearance: none;
     background-color: #66347F;
-    height: 40px;
-    width: 100px;
+    height: 50px;
+    width: 140px;
     color: white;
+    font-size: 20px;
     border: 1px solid grey;
-    border-radius: 20px;
+    border-radius: 30px;
     font-weight: bold;
    
+}
+
+.h-buttons:active {
+    box-shadow: inset 5px 5px 15px rgb(61, 0, 91);
 }
 
 /* Sidebar */
@@ -180,7 +205,7 @@ input[type="search"] {
 .sidebar {
     grid-area: sidebar;
     background-color: #66347F;
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     padding: 20px;
 }
 
@@ -251,18 +276,22 @@ input[type="search"] {
 
 /* Main content */
 
+
+
 .content-header > h1 {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 10px;
 }
 
+
+
 .main-content {
     grid-area: main-content;
-    border: 1px solid blue;
-    background-color: #9E4784;
+    /* border: 1px solid blue; */
+    /* background-color: #9E4784; */
     padding: 20px;
 
 
@@ -270,8 +299,13 @@ input[type="search"] {
     grid-template-columns: 3fr minmax(350px,1fr);
     column-gap: 20px;
     grid-template-areas: 
-    "project-container announcements"
-    "project-container trending";
+    "project-container second-content-col"
+    "project-container second-content-col";
+}
+
+.second-content-col {
+    grid-area: second-content-col;
+    grid-template-rows: repeat(2, 1fr);
 }
 
 .project-container {
@@ -281,7 +315,7 @@ input[type="search"] {
 .your-projects {
     grid-area: your-projects;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     gap: 30px;
 }
 
@@ -290,15 +324,31 @@ input[type="search"] {
     padding: 30px;
     background-color: #D27685;
     border-radius: 10px;
-    border-left: 10px solid crimson;
-    height: 250px;
+    /* border-left: 10px solid crimson; */
+    height: 235px;
     display: grid;
+    grid-template-rows: 35px repeat(2,1fr);
+}
+
+.card-icons > svg > path {
+    fill: #37306B;
+}
+
+/* .project-title {
+    display: grid;
+    align-items: end;
+} */
+
+.project-title > h2 {
+ color:#37306B;
+ font-size: 23px;
 }
 
 .project-details {
-    font-size: 16px;
+    font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    color: #66347F;
+    font-weight: 600;
 }
 
 .card-icon-container {
@@ -310,10 +360,11 @@ input[type="search"] {
 .icon-section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
 }
 
 .card-icons {
-    width: 20px;
+    width: 30px;
 }
 
 
@@ -323,7 +374,7 @@ input[type="search"] {
 
 .announcement-header > h2 {
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    color: #37306B;
     font-size: 20px;
     margin-bottom: 10px;
 }
@@ -343,29 +394,39 @@ input[type="search"] {
     padding: 20px;
 }
 
+.announcement-body {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #66347F;
+    font-weight: 600;
+}
+
 .announcement-cards:nth-child(2)  {
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
+    border-top: 1px solid #66347F;
+    border-bottom: 1px solid #66347F;
 }
 
 .trending {
     grid-area: trending;
 }
 
+.trending > .content-header > h1 {
+    margin-top: 40px;
+}
 
 .trending-profiles {
     display: grid;
     border-radius: 10px;
     background-color: #D27685;
-    padding: 30px;
+    padding: 35px;
 
     display: grid;
     grid-template-rows: repeat(4,1fr);
+    height: 350px;
 }
 
 .profiles {
     display: grid;
-    grid-template-columns: 40px 1fr;
+    grid-template-columns: 50px 1fr;
     column-gap: 30px;
     align-items: center;
     margin: 10px 0px;
@@ -373,10 +434,24 @@ input[type="search"] {
 
 
 .trending-pic > a > img {
-    width: 60px;
+    width: 65px;
 }
-/* .profiles:nth-child(2),
-.profiles:nth-child(3),
-.profiles:nth-child(4){
-    border-top: 2px solid white;
-} */
+
+.trending-uname {
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+    gap: 5px;
+}
+
+
+.uname {
+    color: #37306B;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+.user-bio {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #66347F;
+    font-weight: bold;
+}
