--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ input[type="search"]:focus-visible {
 
 
     display: grid;
-    grid-template-columns: 3fr minmax(350px,1fr);
+    grid-template-columns: 1fr 350px;
     column-gap: 20px;
     grid-template-areas: 
     "project-container second-content-col"
@@ -315,7 +315,7 @@ input[type="search"]:focus-visible {
 .your-projects {
     grid-area: your-projects;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 30px;
 }
 
